libstreamsdir=$(pkglibdir)/streams
dist_libstreams_DATA=streams/primitive.ss streams/derived.ss
libCocoadir=$(pkglibdir)/Cocoa
dist_libCocoa_DATA=Cocoa/helpers.ss

dist_pkglib_DATA= streams.ss match.ss pregexp.ss gl.ss glut.ss \
  ypsilon-compat.ikarus.ss ypsilon-compat.ypsilon.ss \
  objc.ss Cocoa.ss 

